# yerd

./: .coderabbit.yaml  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  SECURITY.md  rust-toolchain.toml  sonar-project.properties
.cargo/: config.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/instructions/: rust-all-crates.instructions.md  xtask.instructions.md  yerd-cli.instructions.md  yerd-config.instructions.md  yerd-core.instructions.md  yerd-dns.instructions.md  yerd-doctor.instructions.md  yerd-gui-backend.instructions.md  yerd-gui-frontend.instructions.md  yerd-helper.instructions.md  yerd-ipc.instructions.md  yerd-mcp.instructions.md  yerd-php.instructions.md  yerd-platform.instructions.md  yerd-proxy.instructions.md  (+2 more)
apps/yerd-gui/src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.bundle-linux-rpm.conf.json  tauri.bundle-linux.conf.json  tauri.bundle-macos.conf.json  tauri.conf.json
apps/yerd-gui/src-tauri/capabilities/: default.json
apps/yerd-gui/src-tauri/deb/: postinst.sh  postrm.sh
apps/yerd-gui/src-tauri/dmg/: README.md  appdmg.json  background.html
apps/yerd-gui/src-tauri/icons/: icon.icns
apps/yerd-gui/src-tauri/launchagents/: dev.yerd.daemon.plist
apps/yerd-gui/src-tauri/rpm/: postinst.sh  postrm.sh
apps/yerd-gui/src-tauri/src/: autostart.rs  commands.rs  daemon.rs  elevate.rs  error.rs  ide.rs  ipc.rs  launch_probe.rs  logging.rs  mac_trust.rs  mail_window.rs  main.rs  smappservice.rs  tray.rs  tray_health.rs  tray_panel.rs
crates/yerd-config/: Cargo.toml  README.md
crates/yerd-config/src/: error.rs  io.rs  lib.rs  migrate.rs  parse.rs  schema.rs  serialize.rs
crates/yerd-config/tests/: io.rs  io_parentless.rs  roundtrip.rs  toml_byte_shape.rs
crates/yerd-core/: Cargo.toml  README.md
crates/yerd-core/src/: detect.rs  domain.rs  error.rs  host.rs  lib.rs  net.rs  php.rs  php_directives.rs  php_extensions.rs  php_settings.rs  proxy.rs  router.rs  site.rs  tld.rs
crates/yerd-core/tests/: serde_roundtrip.rs  wire_stability.rs
crates/yerd-depcheck/: Cargo.toml
crates/yerd-depcheck/src/: lib.rs
crates/yerd-dns/: Cargo.toml
crates/yerd-dns/src/: answer.rs  error.rs  lib.rs  responder.rs  server.rs
crates/yerd-dns/tests/: pure_responder_no_io.rs  server_smoke.rs
crates/yerd-doctor/: Cargo.toml
crates/yerd-doctor/src/: lib.rs
crates/yerd-ipc/: Cargo.toml  README.md
crates/yerd-ipc/src/: create.rs  dump.rs  error.rs  frame.rs  lib.rs  message.rs  request.rs  response.rs  status.rs  transport.rs  update.rs
crates/yerd-ipc/tests/: frame_codec.rs  roundtrip.rs  wire_stability.rs
crates/yerd-mail/: Cargo.toml
crates/yerd-mail/src/: error.rs  lib.rs
crates/yerd-mail/src/io/: mod.rs  server.rs  store.rs
crates/yerd-mail/src/pure/: mime.rs  mod.rs  retention.rs  smtp.rs
crates/yerd-mcp/: Cargo.toml
crates/yerd-mcp/src/: error.rs  lib.rs  protocol.rs  render.rs  tools.rs
crates/yerd-mcp/tests/: no_runtime_deps.rs  protocol.rs  render.rs  tools.rs
crates/yerd-php/: Cargo.toml
crates/yerd-php/src/: error.rs  lib.rs  listen.rs  manager.rs  pool.rs  probe.rs  real.rs  release.rs  traits.rs  version.rs
crates/yerd-php/src/io/: atomic_write.rs  fastcgi_probe.rs  mod.rs
crates/yerd-php/src/pure/: env_scrub.rs  ext_probe.rs  fpm_conf.rs  mod.rs  supervisor.rs
crates/yerd-php/tests/: fpm_conf_golden.rs  no_runtime_deps.rs  supervisor_states.rs
crates/yerd-platform/: Cargo.toml  README.md
crates/yerd-platform/src/: detect.rs  error.rs  helper.rs  lan_ip.rs  lib.rs  metrics.rs  nss_exec.rs  paths.rs  port_binder.rs  port_redirect.rs  resolver.rs  trust_store.rs
crates/yerd-platform/src/os/: linux.rs  macos.rs  mod.rs  unsupported.rs
crates/yerd-platform/src/pure/: cert_identity.rs  dns_probe.rs  firefox.rs  mod.rs  networkmanager_dnsmasq.rs  nss.rs  pem_match.rs  pf_anchor.rs  port_plan.rs  proc_metrics.rs  ps_metrics.rs  resolv_conf.rs  resolved_drop_in.rs  resolver_file.rs  shell_profile.rs  system_roots.rs
crates/yerd-platform/tests/: helper_argv_shape.rs  linux_smoke.rs  macos_smoke.rs  no_runtime_deps.rs  unsupported.rs
crates/yerd-platform/tests/common/: mod.rs
crates/yerd-proxy/: Cargo.toml
crates/yerd-proxy/src/: backend.rs  client_tls.rs  error.rs  lib.rs  server.rs  tls.rs  traits.rs
crates/yerd-proxy/src/forward/: fcgi.rs  http.rs  mod.rs  proxy.rs  script_file.rs  static_file.rs  upgrade.rs
crates/yerd-proxy/src/pure/: cgi_params.rs  fcgi_codec.rs  mod.rs  query.rs  redirect.rs  try_files.rs  unbound.rs
crates/yerd-proxy/tests/: integration_http.rs  integration_https.rs  integration_proxy.rs  no_runtime_deps.rs
crates/yerd-release-manifest/: Cargo.toml
crates/yerd-release-manifest/src/: lib.rs
crates/yerd-service-ctl/: Cargo.toml
crates/yerd-service-ctl/src/: lib.rs
crates/yerd-services/: Cargo.toml
crates/yerd-services/src/: config_render.rs  database.rs  error.rs  health.rs  lib.rs  manager.rs  port.rs  release.rs  service.rs  version.rs
crates/yerd-services/tests/: supervisor_states.rs
crates/yerd-supervise/: Cargo.toml
crates/yerd-supervise/src/: error.rs  lib.rs  listen.rs  real.rs  supervisor.rs  traits.rs
crates/yerd-tls/: Cargo.toml  README.md
crates/yerd-tls/src/: bundle.rs  ca.rs  error.rs  leaf.rs  lib.rs  params.rs  validity.rs
crates/yerd-tls/tests/: chain.rs  fingerprint.rs  issuance_negative.rs  no_runtime_deps.rs  pem_edge_cases.rs  roundtrip.rs  sans.rs  validity.rs
crates/yerd-tls/tests/common/: mod.rs
crates/yerd-tunnel/: Cargo.toml
crates/yerd-tunnel/src/: args.rs  config.rs  error.rs  lib.rs  manager.rs  origin.rs  parse.rs
crates/yerd-update/: Cargo.toml
crates/yerd-update/src/: artifact.rs  lib.rs
docs/: index.md  package-lock.json  package.json
meta/: wordpress-versions.json
scripts/: install.sh  release.sh
xtask/: Cargo.toml
xtask/assets/: changelog.Debian  copyright  postinst  yerd.service
xtask/src/: cdn.rs  deb.rs  main.rs  pack.rs  version.rs
(+253 files in other folders)
