[workspace]
resolver = "2"
members  = ["crates/yerd-core", "crates/yerd-ipc", "crates/yerd-config", "crates/yerd-tls", "crates/yerd-platform", "bin/yerd-helper"]

[workspace.package]
edition      = "2021"
rust-version = "1.77"
license      = "MIT OR Apache-2.0"
publish      = false

[workspace.dependencies]
serde       = { version = "1", features = ["derive"] }
thiserror   = "1"
serde_json  = "1"
serde_test  = "1"
toml        = "0.8"
tokio       = { version = "1", default-features = false, features = ["io-util"] }
tempfile    = "=3.10.1"
rcgen            = { version = "=0.13.2", default-features = false, features = ["pem", "crypto", "ring", "x509-parser"] }
sha2             = { version = "0.10", default-features = false }
time             = { version = "=0.3.36", default-features = false, features = ["std"] }
x509-parser      = { version = "0.16", default-features = false }
pem              = "3"
rustls-pki-types = "1"
directories        = "5"
hex                = { version = "0.4", default-features = false, features = ["alloc"] }
security-framework = "2"
clap               = { version = "=4.5.20", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }
anyhow             = "1"

[workspace.lints.rust]
unsafe_code  = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used      = "deny"
expect_used      = "deny"
panic            = "deny"
todo             = "deny"
dbg_macro        = "deny"
indexing_slicing = "deny"
pedantic                 = { level = "warn", priority = -1 }
module_name_repetitions  = "allow"
missing_errors_doc       = "allow"
missing_panics_doc       = "allow"
must_use_candidate       = "allow"
cast_possible_truncation = "allow"
needless_pass_by_value   = "allow"

# Consolidated MSRV-driven pins (all relax when MSRV moves past 1.85 / edition2024):
#
#   * indexmap 2.14+ requires edition2024; Cargo.lock pins indexmap to 2.13 via
#     `cargo update -p indexmap --precise 2.13.0`.
#   * time 0.3.37+ pulls time-core 0.1.8 which requires edition2024; pinned to
#     =0.3.36 above so the resolved time-core is 0.1.2.
#   * rcgen is patch-pinned to =0.13.2 not for MSRV but to convert silent
#     additions to `rcgen::Error` (it is `#[non_exhaustive]` upstream) into a
#     deliberate version bump that flips the `rcgen_error_detail_table_is_current`
#     tripwire in yerd-tls. See plan §D7.
