[workspace]
resolver = "2"
members  = ["crates/yerd-core", "crates/yerd-ipc", "crates/yerd-config", "crates/yerd-tls", "crates/yerd-platform", "crates/yerd-dns", "crates/yerd-supervise", "crates/yerd-php", "crates/yerd-services", "crates/yerd-proxy", "crates/yerd-doctor", "bin/yerd-helper", "bin/yerdd", "bin/yerd", "apps/yerd-gui/src-tauri", "xtask"]

[workspace.package]
version      = "2.0.1"
edition      = "2021"
rust-version = "1.77"
license      = "MIT OR Apache-2.0"
publish      = false

[workspace.dependencies]
serde       = { version = "1", features = ["derive"] }
thiserror   = "1"
serde_json  = "1"
serde_test  = "1"
toml        = "0.8"
tokio       = { version = "1", default-features = false, features = ["io-util"] }
tempfile    = "=3.10.1"
rcgen            = { version = "=0.13.2", default-features = false, features = ["pem", "crypto", "ring", "x509-parser"] }
sha2             = { version = "0.10", default-features = false }
flate2           = { version = "1" }
tar              = { version = "0.4" }
time             = { version = "=0.3.36", default-features = false, features = ["std"] }
x509-parser      = { version = "0.16", default-features = false }
pem              = "3"
rustls-pki-types = "1"
directories        = "5"
hex                = { version = "0.4", default-features = false, features = ["alloc"] }
security-framework = "2"
clap               = { version = "=4.5.20", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }
anyhow             = "1"
hickory-proto      = "=0.24.4"
hickory-server     = { version = "=0.24.4", default-features = false }
hickory-client     = "=0.24.4"
async-trait        = "0.1"
nix                = { version = "0.29", default-features = false, features = ["process", "signal"] }
reqwest            = { version = "0.12", default-features = false, features = ["rustls-tls"] }
hyper              = { version = "1", default-features = false, features = ["http1", "server", "client"] }
hyper-util         = { version = "0.1", default-features = false, features = ["http1", "server", "client", "tokio"] }
http-body          = "1"
http-body-util     = "0.1"
bytes              = "1"
tokio-rustls       = "0.26"
rustls             = "0.23"
tracing            = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "fmt", "registry"] }
http               = "1"
interprocess       = { version = "2", features = ["tokio"] }
fs4                = { version = "0.13", default-features = false, features = ["sync"] }

[workspace.lints.rust]
unsafe_code  = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used      = "deny"
expect_used      = "deny"
panic            = "deny"
todo             = "deny"
dbg_macro        = "deny"
indexing_slicing = "deny"
pedantic                 = { level = "warn", priority = -1 }
module_name_repetitions  = "allow"
missing_errors_doc       = "allow"
missing_panics_doc       = "allow"
must_use_candidate       = "allow"
cast_possible_truncation = "allow"
needless_pass_by_value   = "allow"

# Strip symbols from release binaries so the packaged .deb stays small (debug
# yerdd is ~139 MB). Trade-off: shipped panic backtraces lose symbol names —
# acceptable given the no-panic/unwrap rule. Use "debuginfo" if names are wanted.
[profile.release]
strip = "symbols"

# Consolidated MSRV-driven pins (all relax when MSRV moves past 1.85 / edition2024):
#
#   * indexmap 2.14+ requires edition2024; Cargo.lock pins indexmap via
#     `cargo update -p indexmap --precise 2.13.0` (lockfile is the source of
#     truth; the resolver may currently sit at an older 2.x).
#   * time 0.3.37+ pulls time-core 0.1.8 which requires edition2024; pinned to
#     =0.3.36 above so the resolved time-core is 0.1.2.
#   * idna_adapter 1.2+ requires edition2024 (rust-version 1.86); Cargo.lock
#     pins it to 1.0.0 via `cargo update -p idna_adapter --precise 1.0.0`.
#     Pulled transitively by hickory-proto via idna; without this pin, fresh
#     checkouts fail to parse the manifest under cargo 1.77.
#   * jobserver 0.1.34+ pulls a newer getrandom 0.3 → wasi 0.14 → wasip2 →
#     wit-bindgen 0.57 chain whose manifest requires edition2024. Cargo.lock
#     pins jobserver to 0.1.32 via
#     `cargo update -p jobserver --precise 0.1.32`. The full chain comes in
#     via `cc -> ring -> rustls/rcgen`, so any crate using rustls or rcgen
#     transitively triggers the trap without this pin.
#   * rcgen is patch-pinned to =0.13.2 not for MSRV but to convert silent
#     additions to `rcgen::Error` (it is `#[non_exhaustive]` upstream) into a
#     deliberate version bump that flips the `rcgen_error_detail_table_is_current`
#     tripwire in yerd-tls.
#   * hickory-proto/server/client are patch-pinned to =0.24.4 for the same
#     reason (`ProtoErrorKind`, `RData` are #[non_exhaustive] upstream).
#   * hyper-rustls 0.27.6+ requires rustc 1.85 (edition2024 in a transitive
#     dep); Cargo.lock pins it to 0.27.5 via
#     `cargo update -p hyper-rustls --precise 0.27.5`. Pulled by `reqwest`,
#     which is only activated by yerd-php's optional `download` feature — so
#     this trap is invisible to the default build and only bites
#     `--all-features`.
