[package]
name                   = "xtask"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish.workspace      = true
description            = "Build automation for Yerd (cargo xtask <cmd>)."

[dependencies]
anyhow = { workspace = true }
clap   = { workspace = true }
flate2 = { workspace = true }

[lints]
workspace = true
