[package]
name                   = "yerd-config"
version                = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish.workspace      = true
description            = "Persisted TOML configuration for Yerd."
readme                 = "README.md"

[dependencies]
yerd-core = { path = "../yerd-core" }
serde     = { workspace = true }
toml      = { workspace = true }
thiserror = { workspace = true }
tempfile  = { workspace = true }

[lints]
workspace = true
