[package]
name                   = "yerd-core"
version                = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish.workspace      = true
description            = "Pure domain model and host→site routing for Yerd."

[dependencies]
serde     = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
serde_test = { workspace = true }
toml       = { workspace = true }

[lints]
workspace = true
