[package]
name                   = "yerd-dns"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish.workspace      = true
description            = "Authoritative *.test DNS responder + hickory server wiring for Yerd."

[dependencies]
yerd-core      = { path = "../yerd-core" }
thiserror      = { workspace = true }
hickory-proto  = { workspace = true }
hickory-server = { workspace = true }
tokio          = { workspace = true, features = ["macros", "net", "rt"] }
async-trait    = { workspace = true }

[dev-dependencies]
tokio          = { workspace = true, features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
hickory-client = { workspace = true }
serde_json     = { workspace = true }

[lints]
workspace = true
