[package]
name                   = "yerd-mail"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish.workspace      = true
description            = "Built-in mail-capture SMTP server + on-disk store for Yerd (Herd-style)."

[dependencies]
yerd-ipc    = { path = "../yerd-ipc" }
thiserror   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true, features = ["net", "io-util", "rt", "sync", "time", "macros", "fs"] }
tracing     = { workspace = true }
# Pure-Rust MIME parser (no C deps). `full_encoding` pulls `encoding_rs` so
# non-UTF-8 charsets decode; we do NOT enable its `serde` feature.
mail-parser = { version = "0.11", default-features = false, features = ["full_encoding"] }

[dev-dependencies]
tokio    = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
tempfile = { workspace = true }

[lints]
workspace = true
