[package]
name                   = "yerd-mail"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish.workspace      = true
description            = "Built-in mail-capture SMTP server + on-disk store for Yerd (Herd-style)."

[dependencies]
yerd-ipc    = { path = "../yerd-ipc" }
thiserror   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true, features = ["net", "io-util", "rt", "sync", "time", "macros", "fs"] }
tracing     = { workspace = true }
# Pure-Rust MIME parser (no C deps); features pinned in the workspace table.
mail-parser = { workspace = true }

[dev-dependencies]
tokio    = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
tempfile = { workspace = true }

[lints]
workspace = true
