[package]
name                   = "yerd-mcp"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish.workspace      = true
description            = "Model Context Protocol server logic: tool catalog, JSON-RPC state machine, and result rendering."

[dependencies]
yerd-core  = { path = "../yerd-core" }
yerd-ipc   = { path = "../yerd-ipc" }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }

[lints]
workspace = true
