[package]
name                   = "yerd-service-ctl"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish.workspace      = true
description            = "Cross-platform start/stop/restart control for the yerdd daemon service."

[dependencies]
thiserror = { workspace = true }

# Safe wrappers for `kill(2)` and `getuid(2)` — no `unsafe` in this crate, so it
# keeps the workspace `unsafe_code = "forbid"` lint. Pinned to the workspace nix
# line; `user` is added here (the workspace default omits it).
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", default-features = false, features = ["signal", "user"] }

[lints]
workspace = true
