[package]
name                   = "yerd-services"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish.workspace      = true
description            = "Local service supervision and version management for Yerd (Redis/Valkey, MySQL, MariaDB, Postgres, Meilisearch)."

[dependencies]
yerd-platform  = { path = "../yerd-platform" }
yerd-supervise = { path = "../yerd-supervise" }
thiserror      = { workspace = true }
async-trait    = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
tokio          = { workspace = true, features = ["process", "net", "rt", "time", "io-util", "macros", "sync"] }

[dev-dependencies]
tokio          = { workspace = true, features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
tempfile       = { workspace = true }
async-trait    = { workspace = true }

[lints]
workspace = true
