[package]
name                   = "yerd-tunnel"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish.workspace      = true
description            = "Cloudflare Tunnel argument/config generation and supervised cloudflared lifecycle for Yerd."

[dependencies]
yerd-supervise = { path = "../yerd-supervise" }
thiserror      = { workspace = true }
async-trait    = { workspace = true }
tokio          = { workspace = true, features = ["process", "rt", "time", "io-util", "macros", "sync", "fs"] }

[target.'cfg(unix)'.dependencies]
nix            = { workspace = true }

[dev-dependencies]
tokio          = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
tempfile       = { workspace = true }

[lints]
workspace = true
