[package]
name                   = "yerd-update"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish.workspace      = true
description            = "Pure release-channel selection and version-decision logic for Yerd self-update."

[dependencies]
semver          = { workspace = true }
sha2            = { workspace = true }
minisign-verify = { workspace = true }
hex             = { workspace = true }

[features]
# Build-time package-format tiebreak. A release ships a `.deb`, a `.pkg.tar.zst`,
# and a `.rpm` for the same Linux arch; the running binary must pick the one
# matching how it was installed. Enabling `pacman` (the Arch package build only)
# flips `PkgFormat::current()` to `Pacman`; `rpm` (the Fedora package build only)
# flips it to `Rpm`. The two distro features are mutually exclusive. Default off →
# `Deb`. See `PkgFormat`.
pacman = []
rpm = []

[lints]
workspace = true
