[package]
name              = "yerd-gui"
version.workspace = true
edition.workspace = true
# NOT the workspace 1.77: current Tauri v2 needs edition2024 (rustc ≥ 1.85).
rust-version      = "1.85"
license.workspace = true
publish.workspace = true
description            = "Yerd desktop GUI (Tauri v2) — a thin yerd-ipc client of yerdd."

[[bin]]
name = "yerd-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Internal crates — the GUI is a client of the same contract the CLI uses.
yerd-core     = { path = "../../../crates/yerd-core" }
yerd-ipc      = { path = "../../../crates/yerd-ipc", features = ["transport"] }
yerd-platform = { path = "../../../crates/yerd-platform" }

tauri                         = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance  = "2"
tauri-plugin-opener           = "2"
tauri-plugin-dialog           = "2"

interprocess = { workspace = true }
tokio        = { workspace = true, features = ["rt", "rt-multi-thread", "io-util", "net", "time"] }
serde        = { workspace = true }
serde_json   = { workspace = true }
libc         = "0.2"

# Linux only: pin the GTK program name so the Wayland app_id matches our
# .desktop entry (yerd-gui.desktop) for the taskbar/dock icon, and reach the
# underlying WebKitGTK view to clamp its zoom level (disable pinch/Ctrl zoom,
# which WebKit handles below the DOM where JS can't intercept it). Versions
# track what tao/wry already pull in.
[target.'cfg(target_os = "linux")'.dependencies]
glib       = "0.18"
webkit2gtk = "=2.0.2"

[dev-dependencies]
tokio       = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
tempfile    = { workspace = true }
yerd-config = { path = "../../../crates/yerd-config" }

# This crate wraps a macro-heavy framework (Tauri). It deliberately does NOT opt
# into the strict workspace lints (pedantic / missing_docs would fire on
# generated code we don't own). Our own bridge code still bans unwrap/expect/
# panic; unsafe is allowed only for the documented geteuid FFI in elevate.rs.
[lints.rust]
unsafe_code  = "allow"
missing_docs = "allow"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic       = "deny"
