[package]
name              = "yerd-gui"
version.workspace = true
edition.workspace = true
# NOT the workspace 1.77: current Tauri v2 needs edition2024 (rustc ≥ 1.85).
rust-version      = "1.85"
license.workspace = true
publish.workspace = true
description            = "Yerd desktop GUI (Tauri v2) — a thin yerd-ipc client of yerdd."

[[bin]]
name = "yerd-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Internal crates — the GUI is a client of the same contract the CLI uses.
yerd-core     = { path = "../../../crates/yerd-core" }
yerd-ipc      = { path = "../../../crates/yerd-ipc", features = ["transport"] }
yerd-platform = { path = "../../../crates/yerd-platform" }

# `image-png` enables Image::from_bytes for the macOS template tray icon (the
# bundled app icon is embedded as RGBA by codegen and needs no runtime decoder).
tauri                         = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-single-instance  = "2"
tauri-plugin-opener           = "2"
tauri-plugin-dialog           = "2"
tauri-plugin-autostart        = "2"

interprocess = { workspace = true }
tokio        = { workspace = true, features = ["rt", "rt-multi-thread", "io-util", "net", "time"] }
serde        = { workspace = true }
serde_json   = { workspace = true }
# Per-session GUI diagnostic log (logging.rs): a truncate-on-launch tracing
# subscriber writing {cache}/yerd-gui.log. No tracing-appender — the session file
# uses a hand-rolled truncate/staleness MakeWriter the 'static registry owns.
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
libc         = "0.2"
# Compare the GUI/daemon version (`env!("CARGO_PKG_VERSION")`) against the
# last-registered daemon version for the upgrade self-repair + directional guard.
semver       = { workspace = true }

# SHA-256 for in-process CA fingerprint verification (mac_trust.rs). The daemon
# is bundled (Tauri externalBin), so there's no runtime download — the former
# reqwest/flate2/tar/hex install stack is gone.
sha2 = { workspace = true }

# Linux only: pin the GTK program name so the Wayland app_id matches our
# .desktop entry (yerd-gui.desktop) for the taskbar/dock icon, and reach the
# underlying WebKitGTK view to clamp its zoom level (disable pinch/Ctrl zoom,
# which WebKit handles below the DOM where JS can't intercept it). Versions
# track what tao/wry already pull in.
[target.'cfg(target_os = "linux")'.dependencies]
glib       = "0.18"
webkit2gtk = "=2.0.2"
# Dark-mode probe for the tray menu icons (tray.rs's `dark_menu_bar`), read via
# the xdg-desktop-portal `Settings` interface so it works across desktop
# environments (GNOME, KDE Plasma, ...) rather than a GTK/GSettings-only check.
# Brings in `ashpd` plus its own `async-std` executor as a self-contained stack
# (not otherwise in the dependency graph); its D-Bus I/O never touches our
# tokio runtime, so it's safe to call off the main thread.
dark-light = "2"

# macOS: re-apply the Dock icon after an activation-policy change (dev builds have
# no .app bundle, so the recreated Dock tile would otherwise show the generic
# executable icon). Versions track what Tauri already resolves, so no duplicates.
[target.'cfg(target_os = "macos")'.dependencies]
objc2            = "0.6"
# `block2` backs the NSNotificationCenter observer block in `launch_probe.rs`
# (detects a login-item launch via NSApplicationLaunchIsDefaultLaunchKey). 0.6 is
# ABI-matched to objc2 0.6.
block2           = "0.6"
# `dispatch2` defers the initial show/hide decision one main-runloop turn
# (`DispatchQueue::main().exec_async`) so the login-launch probe is authoritative
# — `run_on_main_thread` would run inline on the main thread and lose the race.
dispatch2        = "0.3"
objc2-app-kit    = { version = "0.3", features = ["NSApplication", "NSImage", "NSResponder", "NSGraphics", "objc2-core-foundation"] }
objc2-foundation = { version = "0.3", features = ["NSData", "NSString", "NSError", "objc2-core-foundation"] }
# In-process user-domain CA trust (mac_trust.rs). Versions track what
# yerd-platform already resolves, so no duplicate compiles. `core-foundation`
# provides the `TCFType` trait (`as_concrete_TypeRef`); `security-framework-sys`
# + `core-foundation-sys` back the hand-declared `SecTrustSettingsRemoveTrustSettings`
# FFI (the safe crate has no remover).
security-framework     = "2"
security-framework-sys = "2"
core-foundation        = "0.9"
core-foundation-sys    = "0.8"
pem                    = { workspace = true }

[dev-dependencies]
tokio       = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
tempfile    = { workspace = true }
yerd-config = { path = "../../../crates/yerd-config" }

# This crate wraps a macro-heavy framework (Tauri). It deliberately does NOT opt
# into the strict workspace lints (pedantic / missing_docs would fire on
# generated code we don't own). Our own bridge code still bans unwrap/expect/
# panic; unsafe is allowed only for the documented geteuid FFI in elevate.rs.
[lints.rust]
unsafe_code  = "allow"
missing_docs = "allow"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic       = "deny"
